--- a/ee/context/Containerfile
+++ b/ee/context/Containerfile
@@ -1,4 +1,4 @@
-ARG EE_BASE_IMAGE="registry.redhat.io/ansible-automation-platform-25/ee-minimal-rhel9:latest"
+ARG EE_BASE_IMAGE="registry.redhat.io/ansible-automation-platform-25/ee-supported-rhel8:latest"
 ARG PYCMD="/usr/bin/python3"
 ARG PKGMGR_PRESERVE_CACHE=""
 ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS=""
@@ -8,6 +8,7 @@ ARG PKGMGR="/usr/bin/microdnf"
 # Base build stage
 FROM $EE_BASE_IMAGE as base
 USER root
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ARG EE_BASE_IMAGE
 ARG PYCMD
 ARG PKGMGR_PRESERVE_CACHE
@@ -15,13 +16,10 @@ ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS
 ARG PKGMGR
 
-RUN whoami
-RUN cat /etc/os-release
-RUN echo PKGMGR = $PKGMGR, PYCMD = $PYCMD
-RUN $PYCMD -m pip install --upgrade pip
-RUN $PYCMD -m ensurepip
 COPY _build/scripts/ /output/scripts/
 COPY _build/scripts/entrypoint /opt/builder/bin/entrypoint
+RUN $PKGMGR install -y gcc make python3.11-devel pkg-config systemd-devel && $PKGMGR clean all
+RUN /output/scripts/pip_install $PYCMD
 
 # Galaxy build stage
 FROM base as galaxy
@@ -36,11 +34,13 @@ RUN /output/scripts/check_galaxy
 COPY _build /build
 WORKDIR /build
 
+RUN mkdir -p /usr/share/ansible
 RUN ansible-galaxy role install $ANSIBLE_GALAXY_CLI_ROLE_OPTS -r requirements.yml --roles-path "/usr/share/ansible/roles"
 RUN ANSIBLE_GALAXY_DISABLE_GPG_VERIFY=1 ansible-galaxy collection install $ANSIBLE_GALAXY_CLI_COLLECTION_OPTS -r requirements.yml --collections-path "/usr/share/ansible/collections"
 
 # Builder build stage
 FROM base as builder
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
 WORKDIR /build
 ARG EE_BASE_IMAGE
 ARG PYCMD
@@ -49,15 +49,18 @@ ARG ANSIBLE_GALAXY_CLI_COLLECTION_OPTS
 ARG ANSIBLE_GALAXY_CLI_ROLE_OPTS
 ARG PKGMGR
 
-RUN $PYCMD -m pip install --no-cache-dir bindep pyyaml requirements-parser
+RUN $PYCMD -m pip install --no-cache-dir bindep pyyaml packaging
 
 COPY --from=galaxy /usr/share/ansible /usr/share/ansible
 
-RUN $PYCMD /output/scripts/introspect.py introspect --sanitize --write-bindep=/tmp/src/bindep.txt --write-pip=/tmp/src/requirements.txt
+COPY _build/requirements.txt requirements.txt
+COPY _build/bindep.txt bindep.txt
+RUN $PYCMD /output/scripts/introspect.py introspect --user-pip=requirements.txt --user-bindep=bindep.txt --write-bindep=/tmp/src/bindep.txt --write-pip=/tmp/src/requirements.txt
 RUN /output/scripts/assemble
 
 # Final build stage
 FROM base as final
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
 ARG EE_BASE_IMAGE
 ARG PYCMD
 ARG PKGMGR_PRESERVE_CACHE
