--- a/playbooks/aap_config.yml
+++ b/playbooks/aap_config.yml
@@ -7,5 +7,5 @@
   tasks:
     - name: Call dispatch role
       ansible.builtin.include_role:
-        name: infra.aap_configuration.dispatch
+        name: infra.aap_configuration.controller_host_groups
 ...
