--- a/inventory_ci.yml
+++ b/inventory_ci.yml
@@ -28,6 +28,12 @@ all:
       vars:
         connection: local
 
+    automationgateway:
+      hosts:
+        127.0.0.1:
+      vars:
+        connection: local
+
     # can be automationhub if you do not have a specific server for this
     builder:
       hosts:
@@ -43,4 +49,3 @@ all:
         connection: local
   vars:
     env: dev
-...
