--- a/inventory_prod.yml
+++ b/inventory_prod.yml
@@ -22,10 +22,13 @@ all:
       hosts:
         HERE: # FQDN of builder host if you have one. Otherwise, can be Automation Hub host or commented out if not in use.
 
+    automationgateway:
+      hosts:
+        HERE: # FQDN of automation gateway if you have one. Otherwise, can be commented out if not in use.
+
     # Only needed if installing AAP with automation, can be removed if you are not. See Install docs if unsure what server should be the database host.
     database:
       hosts:
         HERE:
   vars:
     env: prod
-...
