--- a/group_vars/all/gateway_users.yml
+++ b/group_vars/all/gateway_users.yml
@@ -1,15 +1,14 @@
 ---
-hub_token_username: token_user
 aap_user_accounts_all:
   - username: api_user
     is_superuser: false
-    password: "{{ controller_api_user_pass }}"
+    password: "test1234"
   - username: token_user
     # Currently not working
     # groups:
     #   - "admin"
     append: true
     is_superuser: true
-    password: "{{ hub_api_user_pass }}"
+    password: "test1234"
     state: present
 ...
